[gd_scene load_steps=7 format=3 uid="uid://bf7afavt2npek"]

[ext_resource type="Theme" uid="uid://diu3ahrw1puva" path="res://addons/HTNDomainManager/PluginSystem/PluginTheme.tres" id="1_ye7bi"]
[ext_resource type="Script" path="res://addons/HTNDomainManager/PluginSystem/ConditionEditor/ConditionLine/ConditionLineManager.gd" id="2_cl4gb"]
[ext_resource type="PackedScene" uid="uid://driybkq8qi0rh" path="res://addons/HTNDomainManager/PluginSystem/Components/DeleteButton.tscn" id="3_043tm"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2xknv"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ag4d0"]

[sub_resource type="StyleBoxLine" id="StyleBoxLine_1v8jr"]
color = Color(0.376471, 0.592157, 0.788235, 1)
thickness = 5

[node name="ConditionLine" type="VBoxContainer"]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -16.5
offset_bottom = 16.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_ye7bi")
script = ExtResource("2_cl4gb")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="DeleteButton" parent="HBoxContainer" instance=ExtResource("3_043tm")]
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="HBoxContainer"]
custom_minimum_size = Vector2(8, 8)
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_2xknv")

[node name="WorldStateLineEditor" type="LineEdit" parent="HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
placeholder_text = "World State"

[node name="HSeparator2" type="HSeparator" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/separator = SubResource("StyleBoxEmpty_2xknv")

[node name="CompareOption" type="OptionButton" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
alignment = 1
item_count = 6
selected = 0
allow_reselect = true
popup/item_0/text = "Greater Than"
popup/item_0/id = 0
popup/item_1/text = "Less Than"
popup/item_1/id = 1
popup/item_2/text = "Equal To"
popup/item_2/id = 2
popup/item_3/text = "Greater Than or Equal To"
popup/item_3/id = 3
popup/item_4/text = "Less Than or Equal To"
popup/item_4/id = 4
popup/item_5/text = "Range"
popup/item_5/id = 5

[node name="RangeTypeOption" type="OptionButton" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
alignment = 1
item_count = 2
selected = 0
allow_reselect = true
popup/item_0/text = "Int"
popup/item_0/id = 0
popup/item_1/text = "Float"
popup/item_1/id = 1

[node name="SingleTypeOption" type="OptionButton" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
alignment = 1
item_count = 7
selected = 0
popup/item_0/text = "Boolean"
popup/item_0/id = 0
popup/item_1/text = "Int"
popup/item_1/id = 1
popup/item_2/text = "Float"
popup/item_2/id = 2
popup/item_3/text = "String"
popup/item_3/id = 3
popup/item_4/text = "Vector2"
popup/item_4/id = 4
popup/item_5/text = "Vector3"
popup/item_5/id = 5
popup/item_6/text = "World State"
popup/item_6/id = 6

[node name="HSeparator3" type="HSeparator" parent="."]
custom_minimum_size = Vector2(8, 8)
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_ag4d0")

[node name="DataContainer" type="HBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2
alignment = 2

[node name="IsTrueToggle" type="CheckButton" parent="DataContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "State:"

[node name="StringValue" type="LineEdit" parent="DataContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
placeholder_text = "text..."

[node name="XLabel" type="Label" parent="DataContainer"]
unique_name_in_owner = true
layout_mode = 2
horizontal_alignment = 2

[node name="XValue" type="SpinBox" parent="DataContainer"]
unique_name_in_owner = true
layout_mode = 2
allow_greater = true
allow_lesser = true

[node name="XCheckBox" type="CheckBox" parent="DataContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "(Inclusive)"

[node name="RangeSeparator" type="HSeparator" parent="DataContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(16, 0)
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxLine_1v8jr")

[node name="YLabel" type="Label" parent="DataContainer"]
unique_name_in_owner = true
layout_mode = 2
horizontal_alignment = 2

[node name="YValue" type="SpinBox" parent="DataContainer"]
unique_name_in_owner = true
layout_mode = 2
allow_greater = true
allow_lesser = true

[node name="YCheckBox" type="CheckBox" parent="DataContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "(Exclusive)"

[node name="ZLabel" type="Label" parent="DataContainer"]
unique_name_in_owner = true
layout_mode = 2
horizontal_alignment = 2

[node name="ZValue" type="SpinBox" parent="DataContainer"]
unique_name_in_owner = true
layout_mode = 2
allow_greater = true
allow_lesser = true

[node name="HSeparator" type="HSeparator" parent="."]
layout_mode = 2

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="HBoxContainer/DeleteButton" to="." method="_on_delete_button_pressed"]
[connection signal="item_selected" from="HBoxContainer/CompareOption" to="." method="_on_compare_option_item_selected"]
[connection signal="item_selected" from="HBoxContainer/RangeTypeOption" to="." method="_on_range_type_option_item_selected"]
[connection signal="item_selected" from="HBoxContainer/SingleTypeOption" to="." method="_on_single_type_option_item_selected"]
